corrigindo busca de empresa nao existente